// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`document content > [anthropic] encodes URL document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What is this PDF about? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "type": "url_document_source",
              "url": "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "This PDF is a blank placeholder document titled "Dummy PDF file" with no substantive content.",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "This PDF is a blank placeholder document titled "Dummy PDF file" with no substantive content.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "anthropic/claude-haiku-4-5",
    "providerId": "anthropic",
    "providerModelName": "claude-haiku-4-5",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 1617,
      "outputTokens": 23,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 1640,
    },
  },
}
`;

exports[`document content > [anthropic] encodes base64 document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What text is in this PDF document? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "data": "JVBERi0xLjQKMSAwIG9iago8PCAvVHlwZSAvQ2F0YWxvZyAvUGFnZXMgMiAwIFIgPj4KZW5kb2JqCgoyIDAgb2JqCjw8IC9UeXBlIC9QYWdlcyAvS2lkcyBbMyAwIFJdIC9Db3VudCAxID4+CmVuZG9iagoKMyAwIG9iago8PCAvVHlwZSAvUGFnZSAvUGFyZW50IDIgMCBSIC9NZWRpYUJveCBbMCAwIDYxMiA3OTJdCiAgIC9Db250ZW50cyA0IDAgUiAvUmVzb3VyY2VzIDw8IC9Gb250IDw8IC9GMSA1IDAgUiA+PiA+PiA+PgplbmRvYmoKCjQgMCBvYmoKPDwgL0xlbmd0aCA0NCA+PgpzdHJlYW0KQlQgL0YxIDI0IFRmIDEwMCA3MDAgVGQgKEhlbGxvLCB3b3JsZCEpIFRqIEVUCmVuZHN0cmVhbQplbmRvYmoKCjUgMCBvYmoKPDwgL1R5cGUgL0ZvbnQgL1N1YnR5cGUgL1R5cGUxIC9CYXNlRm9udCAvSGVsdmV0aWNhID4+CmVuZG9iagoKeHJlZgowIDYKMDAwMDAwMDAwMCA2NTUzNSBmCjAwMDAwMDAwMDkgMDAwMDAgbgowMDAwMDAwMDU4IDAwMDAwIG4KMDAwMDAwMDExNSAwMDAwMCBuCjAwMDAwMDAyNjYgMDAwMDAgbgowMDAwMDAwMzYwIDAwMDAwIG4KCnRyYWlsZXIKPDwgL1NpemUgNiAvUm9vdCAxIDAgUiA+PgpzdGFydHhyZWYKNDM0CiUlRU9G",
              "mediaType": "application/pdf",
              "type": "base64_document_source",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The PDF document contains the text "Hello, world!"",
            "type": "text",
          },
        ],
        "modelId": "anthropic/claude-haiku-4-5",
        "name": null,
        "providerId": "anthropic",
        "providerModelName": "claude-haiku-4-5",
        "rawMessage": {
          "content": [
            {
              "text": "The PDF document contains the text "Hello, world!"",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "anthropic/claude-haiku-4-5",
    "providerId": "anthropic",
    "providerModelName": "claude-haiku-4-5",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 1598,
      "outputTokens": 14,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 1612,
    },
  },
}
`;

exports[`document content > [google] encodes base64 document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What text is in this PDF document? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "data": "JVBERi0xLjQKMSAwIG9iago8PCAvVHlwZSAvQ2F0YWxvZyAvUGFnZXMgMiAwIFIgPj4KZW5kb2JqCgoyIDAgb2JqCjw8IC9UeXBlIC9QYWdlcyAvS2lkcyBbMyAwIFJdIC9Db3VudCAxID4+CmVuZG9iagoKMyAwIG9iago8PCAvVHlwZSAvUGFnZSAvUGFyZW50IDIgMCBSIC9NZWRpYUJveCBbMCAwIDYxMiA3OTJdCiAgIC9Db250ZW50cyA0IDAgUiAvUmVzb3VyY2VzIDw8IC9Gb250IDw8IC9GMSA1IDAgUiA+PiA+PiA+PgplbmRvYmoKCjQgMCBvYmoKPDwgL0xlbmd0aCA0NCA+PgpzdHJlYW0KQlQgL0YxIDI0IFRmIDEwMCA3MDAgVGQgKEhlbGxvLCB3b3JsZCEpIFRqIEVUCmVuZHN0cmVhbQplbmRvYmoKCjUgMCBvYmoKPDwgL1R5cGUgL0ZvbnQgL1N1YnR5cGUgL1R5cGUxIC9CYXNlRm9udCAvSGVsdmV0aWNhID4+CmVuZG9iagoKeHJlZgowIDYKMDAwMDAwMDAwMCA2NTUzNSBmCjAwMDAwMDAwMDkgMDAwMDAgbgowMDAwMDAwMDU4IDAwMDAwIG4KMDAwMDAwMDExNSAwMDAwMCBuCjAwMDAwMDAyNjYgMDAwMDAgbgowMDAwMDAwMzYwIDAwMDAwIG4KCnRyYWlsZXIKPDwgL1NpemUgNiAvUm9vdCAxIDAgUiA+PgpzdGFydHhyZWYKNDM0CiUlRU9G",
              "mediaType": "application/pdf",
              "type": "base64_document_source",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The text in the PDF document is "Hello, world!".",
            "type": "text",
          },
        ],
        "modelId": "google/gemini-2.5-flash",
        "name": null,
        "providerId": "google",
        "providerModelName": "gemini-2.5-flash",
        "rawMessage": {
          "parts": [
            {
              "text": "The text in the PDF document is "Hello, world!".",
            },
          ],
          "role": "model",
        },
        "role": "assistant",
      },
    ],
    "modelId": "google/gemini-2.5-flash",
    "providerId": "google",
    "providerModelName": "gemini-2.5-flash",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 273,
      "outputTokens": 58,
      "raw": "[object Object]",
      "reasoningTokens": 46,
      "totalTokens": 331,
    },
  },
}
`;

exports[`document content > [openai:completions] encodes base64 document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What text is in this PDF document? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "data": "JVBERi0xLjQKMSAwIG9iago8PCAvVHlwZSAvQ2F0YWxvZyAvUGFnZXMgMiAwIFIgPj4KZW5kb2JqCgoyIDAgb2JqCjw8IC9UeXBlIC9QYWdlcyAvS2lkcyBbMyAwIFJdIC9Db3VudCAxID4+CmVuZG9iagoKMyAwIG9iago8PCAvVHlwZSAvUGFnZSAvUGFyZW50IDIgMCBSIC9NZWRpYUJveCBbMCAwIDYxMiA3OTJdCiAgIC9Db250ZW50cyA0IDAgUiAvUmVzb3VyY2VzIDw8IC9Gb250IDw8IC9GMSA1IDAgUiA+PiA+PiA+PgplbmRvYmoKCjQgMCBvYmoKPDwgL0xlbmd0aCA0NCA+PgpzdHJlYW0KQlQgL0YxIDI0IFRmIDEwMCA3MDAgVGQgKEhlbGxvLCB3b3JsZCEpIFRqIEVUCmVuZHN0cmVhbQplbmRvYmoKCjUgMCBvYmoKPDwgL1R5cGUgL0ZvbnQgL1N1YnR5cGUgL1R5cGUxIC9CYXNlRm9udCAvSGVsdmV0aWNhID4+CmVuZG9iagoKeHJlZgowIDYKMDAwMDAwMDAwMCA2NTUzNSBmCjAwMDAwMDAwMDkgMDAwMDAgbgowMDAwMDAwMDU4IDAwMDAwIG4KMDAwMDAwMDExNSAwMDAwMCBuCjAwMDAwMDAyNjYgMDAwMDAgbgowMDAwMDAwMzYwIDAwMDAwIG4KCnRyYWlsZXIKPDwgL1NpemUgNiAvUm9vdCAxIDAgUiA+PgpzdGFydHhyZWYKNDM0CiUlRU9G",
              "mediaType": "application/pdf",
              "type": "base64_document_source",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The text in the PDF document is "Hello, world!"",
            "type": "text",
          },
        ],
        "modelId": "openai/gpt-4o-mini:completions",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-4o-mini:completions",
        "rawMessage": {
          "annotations": [],
          "content": "The text in the PDF document is "Hello, world!"",
          "role": "assistant",
        },
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-4o-mini:completions",
    "providerId": "openai",
    "providerModelName": "gpt-4o-mini:completions",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 241,
      "outputTokens": 12,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 253,
    },
  },
}
`;

exports[`document content > [openai:responses] encodes URL document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What is this PDF about? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "type": "url_document_source",
              "url": "https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The PDF is a placeholder file with no meaningful content.",
            "type": "text",
          },
        ],
        "modelId": "openai/gpt-4o-mini:responses",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-4o-mini:responses",
        "rawMessage": [
          {
            "content": [
              {
                "annotations": [],
                "logprobs": [],
                "text": "The PDF is a placeholder file with no meaningful content.",
                "type": "output_text",
              },
            ],
            "id": "msg_030415425297cae000698678c4ff1881908a7bf602d59402e6",
            "role": "assistant",
            "status": "completed",
            "type": "message",
          },
        ],
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-4o-mini:responses",
    "providerId": "openai",
    "providerModelName": "gpt-4o-mini:responses",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 26,
      "outputTokens": 12,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 38,
    },
  },
}
`;

exports[`document content > [openai:responses] encodes base64 document 1`] = `
{
  "response": {
    "finishReason": null,
    "format": null,
    "messages": [
      {
        "content": [
          {
            "text": "What text is in this PDF document? Reply in one short sentence.",
            "type": "text",
          },
          {
            "source": {
              "data": "JVBERi0xLjQKMSAwIG9iago8PCAvVHlwZSAvQ2F0YWxvZyAvUGFnZXMgMiAwIFIgPj4KZW5kb2JqCgoyIDAgb2JqCjw8IC9UeXBlIC9QYWdlcyAvS2lkcyBbMyAwIFJdIC9Db3VudCAxID4+CmVuZG9iagoKMyAwIG9iago8PCAvVHlwZSAvUGFnZSAvUGFyZW50IDIgMCBSIC9NZWRpYUJveCBbMCAwIDYxMiA3OTJdCiAgIC9Db250ZW50cyA0IDAgUiAvUmVzb3VyY2VzIDw8IC9Gb250IDw8IC9GMSA1IDAgUiA+PiA+PiA+PgplbmRvYmoKCjQgMCBvYmoKPDwgL0xlbmd0aCA0NCA+PgpzdHJlYW0KQlQgL0YxIDI0IFRmIDEwMCA3MDAgVGQgKEhlbGxvLCB3b3JsZCEpIFRqIEVUCmVuZHN0cmVhbQplbmRvYmoKCjUgMCBvYmoKPDwgL1R5cGUgL0ZvbnQgL1N1YnR5cGUgL1R5cGUxIC9CYXNlRm9udCAvSGVsdmV0aWNhID4+CmVuZG9iagoKeHJlZgowIDYKMDAwMDAwMDAwMCA2NTUzNSBmCjAwMDAwMDAwMDkgMDAwMDAgbgowMDAwMDAwMDU4IDAwMDAwIG4KMDAwMDAwMDExNSAwMDAwMCBuCjAwMDAwMDAyNjYgMDAwMDAgbgowMDAwMDAwMzYwIDAwMDAwIG4KCnRyYWlsZXIKPDwgL1NpemUgNiAvUm9vdCAxIDAgUiA+PgpzdGFydHhyZWYKNDM0CiUlRU9G",
              "mediaType": "application/pdf",
              "type": "base64_document_source",
            },
            "type": "document",
          },
        ],
        "name": null,
        "role": "user",
      },
      {
        "content": [
          {
            "text": "The text in the PDF document is "Hello, world!"",
            "type": "text",
          },
        ],
        "modelId": "openai/gpt-4o-mini:responses",
        "name": null,
        "providerId": "openai",
        "providerModelName": "gpt-4o-mini:responses",
        "rawMessage": [
          {
            "content": [
              {
                "annotations": [],
                "logprobs": [],
                "text": "The text in the PDF document is "Hello, world!"",
                "type": "output_text",
              },
            ],
            "id": "msg_0098c459e937f81e00698678c0c08481a29f8f5a4232ffdd6c",
            "role": "assistant",
            "status": "completed",
            "type": "message",
          },
        ],
        "role": "assistant",
      },
    ],
    "modelId": "openai/gpt-4o-mini:responses",
    "providerId": "openai",
    "providerModelName": "gpt-4o-mini:responses",
    "tools": [],
    "usage": {
      "cacheReadTokens": 0,
      "cacheWriteTokens": 0,
      "inputTokens": 29,
      "outputTokens": 13,
      "raw": "[object Object]",
      "reasoningTokens": 0,
      "totalTokens": 42,
    },
  },
}
`;
